--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,17 +21,18 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.16.0
-  path_provider: ^1.6.5
-  cupertino_icons: ^0.1.2
-  url_launcher: ^5.4.5
-  flutter_launcher_icons: ^0.7.5
+  #intl: ^0.16.0
+  http: ^0.12.2
+  path_provider: ^2.0.1
+  cupertino_icons: ^1.0.2
+  url_launcher: ^6.0.2
+  #flutter_launcher_icons: ^0.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  pedantic: ^1.4.0
-  intl_translation: ^0.17.9
+  pedantic: ^1.11.0
+  #intl_translation: ^0.17.10+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
