why am i commiting this

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: nutrition_tracker
-description: A new Flutter project.
+name: honest_calorie
+description: A free, open-source and privacy respecting calorie tracker.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -22,7 +22,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   #intl: ^0.16.0
-  http: ^0.12.2
+  http: ^0.13.1
   path_provider: ^2.0.1
   cupertino_icons: ^1.0.2
   url_launcher: ^6.0.2
