--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,17 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  json_annotation: ^4.9.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
+
+  build_runner: ^2.4.9
+  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
